--- a/css/style.css
+++ b/css/style.css
@@ -188,7 +188,7 @@ nav.hidden {
 .btn {
     display: inline-block;
     padding: 12px 30px;
-    background-color: #e74c3c;
+    background-color: #0a0a09;
     color: white;
     text-decoration: none;
     border-radius: 5px;
