--- a/css/style.css
+++ b/css/style.css
@@ -542,3 +542,23 @@ body.dark-theme {
     margin-bottom: 10px;
     font-size: 1.1rem;
 }
+
+/* Адаптация для мобильных */
+@media (max-width: 768px) {
+    .custom-project-content {
+        flex-direction: column;
+    }
+    
+    .custom-project-author {
+        width: 100%;
+        margin-top: 40px;
+    }
+    
+    .contact-buttons {
+        flex-direction: column;
+    }
+    
+    .custom-project-text h2 {
+        font-size: 2rem;
+    }
+}
